--- a/visualoom/package.json
+++ b/visualoom/package.json
@@ -11,17 +11,20 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.8",
     "@mui/material": "^7.3.5",
     "@mui/styled-engine-sc": "^7.3.5",
     "axios": "^1.13.2",
-    "component": "^1.1.0",
+    "component": "^0.19.9",
     "mui": "^0.0.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "upgrade": "^1.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
